// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/ActiveState/activity-feed/ActiveState should correctly render with an inline error if some feed items fail to fetch 1`] = `
<Fragment>
  <InlineError
    title={
      <FormattedMessage
        0="t"
      />
    }
  >
    <FormattedMessage
      0="m"
    />
  </InlineError>
  <ActiveState
    currentFileVersionId="123"
    currentUser={
      Object {
        "id": "user_123445",
        "name": "Rihanna",
      }
    }
    items={Array []}
  />
</Fragment>
`;

exports[`elements/content-sidebar/ActiveState/activity-feed/ActiveState should render empty state 1`] = `
<ActiveState
  currentFileVersionId="123"
  currentUser={
    Object {
      "id": "user_123445",
      "name": "Rihanna",
    }
  }
  items={Array []}
/>
`;

exports[`elements/content-sidebar/ActiveState/activity-feed/ActiveState should render items 1`] = `
<ul
  className="bcs-activity-feed-active-state"
>
  <ForwardRef(ActivityItem)
    className="bcs-activity-feed-annotation-activity"
    data-testid="annotation-activity"
    isFocused={false}
    key="annotationanno_123"
  >
    <AnnotationActivity
      currentUser={
        Object {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      isCurrentVersion={true}
      item={
        Object {
          "created_at": "2018-07-03T14:43:52-07:00",
          "created_by": Object {
            "id": "user_123445",
            "name": "Rihanna",
          },
          "description": Object {
            "message": "This is an annotation",
          },
          "file_version": Object {
            "id": "123",
          },
          "id": "anno_123",
          "target": Object {
            "location": Object {
              "type": "page",
              "value": 1,
            },
            "type": "region",
          },
          "type": "annotation",
        }
      }
    />
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    className="bcs-activity-feed-comment"
    data-testid="comment"
    isFocused={false}
    key="commentc_123"
  >
    <Comment
      created_at="2018-07-03T14:43:52-07:00"
      created_by={
        Object {
          "id": 11,
          "name": "Akon",
        }
      }
      currentUser={
        Object {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      id="c_123"
      onDelete={[Function]}
      onEdit={[Function]}
      permissions={
        Object {
          "can_delete": false,
          "can_edit": false,
        }
      }
      tagged_message="test @[123:Jeezy] @[10:Kanye West]"
      type="comment"
    />
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    className="bcs-version-item"
    data-testid="version"
    key="file_versionf_123"
  >
    <Version
      created_at="2018-07-03T14:43:52-07:00"
      id="f_123"
      modified_at="2018-07-03T14:43:52-07:00"
      modified_by={
        Object {
          "id": 11,
          "name": "Akon",
        }
      }
      trashed_at="2018-07-03T14:43:52-07:00"
      type="file_version"
    />
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    className="bcs-activity-feed-task-new"
    data-testid="task"
    isFocused={false}
    key="taskt_345"
  >
    <ForwardRef
      assigned_to={
        Object {
          "entries": Array [
            Object {
              "id": "ta_123",
              "permissions": Object {
                "can_delete": true,
                "can_update": true,
              },
              "role": "ASSIGNEE",
              "status": "NOT_STARTED",
              "target": Object {
                "id": 11,
                "name": "Akon",
              },
              "type": "task_collaborator",
            },
          ],
          "limit": 20,
          "next_marker": null,
        }
      }
      created_at="2018-07-03T14:43:52-07:00"
      created_by={
        Object {
          "target": Object {
            "id": 11,
            "name": "Akon",
          },
        }
      }
      currentUser={
        Object {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      description="test"
      due_at="2018-07-03T14:43:52-07:00"
      id="t_345"
      modified_at="2018-07-03T14:43:52-07:00"
      permissions={
        Object {
          "can_create_task_collaborator": true,
          "can_create_task_link": true,
          "can_delete": true,
          "can_update": true,
        }
      }
      status="NOT_STARTED"
      task_links={
        Object {
          "entries": Array [
            Object {
              "target": Object {
                "id": "f_123",
                "type": "file",
              },
            },
          ],
        }
      }
      task_type="GENERAL"
      type="task"
    />
  </ForwardRef(ActivityItem)>
  <ForwardRef(ActivityItem)
    className="bcs-activity-feed-app-activity"
    data-testid="app-activity"
    key="app_activityapp_activity_12344556"
  >
    <AppActivity
      activity_template={
        Object {
          "id": "template_09887654",
        }
      }
      app={
        Object {
          "icon_url": "foo.jpg",
          "id": "app_123456",
          "name": "My App",
        }
      }
      created_at="2018-07-03T14:43:52-07:00"
      created_by={
        Object {
          "id": "user_12345567",
        }
      }
      currentUser={
        Object {
          "id": "user_123445",
          "name": "Rihanna",
        }
      }
      id="app_activity_12344556"
      permissions={
        Object {
          "can_delete": true,
        }
      }
      rendered_text="this is text and a <a>link</a>"
      type="app_activity"
    />
  </ForwardRef(ActivityItem)>
</ul>
`;
